--- a/index.html
+++ b/index.html
@@ -160,18 +160,18 @@
             <h1 style="text-align: center;">Contact Me
                 <hr class="section-divider">
             </h1>
-            <form class="form" id="contact-form">
+            <form class="form" name="contact" method="POST" data-netlify="true">
                 <label for="name">
-                    <input type="text" placeholder="Enter Your Name..." id="name" required>
+                    <input type="text" name="name" placeholder="Enter Your Name..." id="name" required>
                 </label>
                 <label for="email">
-                    <input type="email" placeholder="Your Email..." id="email" required>
+                    <input type="email" name="email" placeholder="Enter Your Email..." id="email" required>
                 </label>
                 <label for="message">
-                    <textarea rows="4" cols="50" placeholder="Write your message..." id="message" required></textarea>
+                    <textarea rows="4" cols="50" name="message" placeholder="Write Your Message..." id="message" required></textarea>
                 </label>
                 <label>
-                    <button type="submit" class="button button2" aria-label="Submit">Submit</button>
+                    <button type="submit" class="button button2" aria-label="Submit">Send</button>
                 </label>
             </form>
         </div>
@@ -179,8 +179,5 @@
     </body>
     <footer>
         <p>&copy; 2024 Neil Patrick Pajadan</p>
-        <a target="_blank" href="https://icons8.com/icon/21278/css3">CSS Logo</a> icon by
-        <a target="_blank" href="https://icons8.com">Icons8</a>
-        <a href="https://www.flaticon.com/free-icons/c-sharp" title="c sharp icons">C sharp icons created by Freepik - Flaticon</a>
     </footer>
 </html>
