--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <p id="typewriter-text2"></p>
         </div>
         <button type="button" class="button button1" aria-label="Get in touch">
-          <a href="#contact">Get in Touch</a>
+          <a href="#contact">Reach Out</a>
         </button>
       </div>
     </section>
@@ -168,7 +168,7 @@
               <a
                 href="https://github.com/Neil-Patrick/Pajadan-Blog"
                 target="_blank"
-                >View Project</a
+                >View Repository</a
               >
             </p>
           </article>
@@ -185,7 +185,7 @@
               arithmetic skills through interactive gameplay.
             </p>
             <a href="https://github.com/Neil-Patrick/Math-Quest" target="_blank"
-              >View Project</a
+              >View Repository</a
             >
             <a
               href="https://www.youtube.com/watch?v=s7MLZh8reNc"
@@ -245,7 +245,7 @@
 
     <footer>
       <div class="footer-content">
-        <h2>Neil Patrick Pajadan || Front-End Developer</h2>
+        <h1 style="font-size: 1.5rem;">Neil Patrick Pajadan || Front-End Developer</h1>
         <nav class="footer-nav">
           <ul class="footer-nav-elements">
             <li><a href="index.html">Home</a></li>
@@ -266,23 +266,43 @@
                 </li>
                 <li>
                   <img src="images/email icon.png" alt="Email Icon" />
-                  <a href="https://www.gmail.com" target="_blank">patpajadan6825@gmail.com</a>
+                  <a href="https://www.gmail.com" target="_blank"
+                    >patpajadan6825@gmail.com</a
+                  >
                 </li>
                 <li>
                   <img src="images/linkedin icon.png" alt="LinkedIn Icon" />
-                  <a href="https://www.linkedin.com/in/neil-patrick-pajadan-aa824b32a/" target="_blank">LinkedIn</a>
+                  <a
+                    href="https://www.linkedin.com/in/neil-patrick-pajadan-aa824b32a/"
+                    target="_blank"
+                    >LinkedIn</a
+                  >
                 </li>
                 <li>
                   <img src="images/github icon.png" alt="GitHub Icon" />
-                  <a href="https://github.com/Neil-Patrick" target="_blank">GitHub</a>
+                  <a href="https://github.com/Neil-Patrick" target="_blank"
+                    >GitHub</a
+                  >
                 </li>
                 <li>
-                  <img src="images/stack overflow icon.png" alt="Stack Overflow Icon" />
-                  <a href="https://stackoverflow.com/users/27342895/patrick" target="_blank">Stack Overflow</a>
+                  <img
+                    src="images/stack overflow icon.png"
+                    alt="Stack Overflow Icon"
+                  />
+                  <a
+                    href="https://stackoverflow.com/users/27342895/patrick"
+                    target="_blank"
+                    >Stack Overflow</a
+                  >
                 </li>
                 <li>
-                  <img src="images/dev community icon.png" alt="Dev Community Icon" />
-                  <a href="https://dev.to/neilpatrick" target="_blank">Dev Community</a>
+                  <img
+                    src="images/dev community icon.png"
+                    alt="Dev Community Icon"
+                  />
+                  <a href="https://dev.to/neilpatrick" target="_blank"
+                    >Dev Community</a
+                  >
                 </li>
               </ul>
             </div>
@@ -291,27 +311,39 @@
               <ul class="soc-elements">
                 <li>
                   <img src="images/facebook icon.png" alt="Facebook Icon" />
-                  <a href="https://www.facebook.com/pat.pajadan" target="_blank">Facebook</a>
+                  <a href="https://www.facebook.com/pat.pajadan" target="_blank"
+                    >Facebook</a
+                  >
                 </li>
                 <li>
                   <img src="images/discord icon.png" alt="Discord Icon" />
-                  <a href="https://discord.com/" target="_blank">Discord (pajadan)</a>
+                  <a href="https://discord.com/" target="_blank"
+                    >Discord (pajadan)</a
+                  >
                 </li>
                 <li>
                   <img src="images/twitter icon.png" alt="X Icon" />
-                  <a href="https://x.com/pajadan6825" target="_blank">X (Twitter)</a>
+                  <a href="https://x.com/pajadan6825" target="_blank"
+                    >X (Twitter)</a
+                  >
                 </li>
                 <li>
                   <img src="images/instagram icon.png" alt="Instagram Icon" />
-                  <a href="https://www.instagram.com/aethr_pat/" target="_blank">Instagram</a>
+                  <a href="https://www.instagram.com/aethr_pat/" target="_blank"
+                    >Instagram</a
+                  >
                 </li>
                 <li>
                   <img src="images/threads icon.png" alt="Threads Icon" />
-                  <a href="https://www.threads.net/@aethr_pat" target="_blank">Threads</a>
+                  <a href="https://www.threads.net/@aethr_pat" target="_blank"
+                    >Threads</a
+                  >
                 </li>
                 <li>
                   <img src="images/tiktok icon.png" alt="TikTok Icon" />
-                  <a href="https://www.tiktok.com/@aethr_0" target="_blank">TikTok</a>
+                  <a href="https://www.tiktok.com/@aethr_0" target="_blank"
+                    >TikTok</a
+                  >
                 </li>
               </ul>
             </div>
