--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400&family=Poppins:wght@600&display=swap"
     />
-    <link rel="stylesheet" href="header-footer.css" />
-    <link rel="stylesheet" href="body.css" />
-    <link rel="stylesheet" href="website.css" />
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="base.css" />
   </head>
+
   <body data-theme="dark">
     <header>
       <nav class="header-nav">
@@ -36,7 +38,7 @@
             <h1>PAJADAN</h1>
           </a>
         </div>
-        <div class="menu-toggle" id="mobile-menu">
+        <div class="menu-toggle" id="mobile-menu" aria-expanded="false">
           <i class="fas fa-bars"></i>
         </div>
         <ul class="header-nav-elements">
@@ -53,14 +55,29 @@
             <a href="#contact">Contact</a>
           </li>
           <li>
-            <button id="theme-toggle" aria-label="Toggle Mode">
-              <i class="fas fa-moon" id="moon-icon"></i>
-              <i class="fas fa-sun" id="sun-icon" style="display: none"></i>
-            </button>
+            <a href="#" id="theme-button">Themes</a>
           </li>
         </ul>
       </nav>
     </header>
+
+    <div class="theme-modal" id="theme-modal">
+      <div class="theme-modal-content">
+        <span class="close-button" id="close-button">&times;</span>
+        <h2>Mode</h2>
+        <div class="theme-toggle-nav">
+          <button id="theme-toggle" aria-label="Switch Theme">
+            <div class="slider">
+              <i class="fas fa-moon" id="moon-icon"></i>
+              <i class="fas fa-sun" id="sun-icon" style="display: none"></i>
+              <span id="theme-text">Dark Mode</span>
+            </div>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="divider"></div>
 
     <section>
       <div class="frontpage">
@@ -91,9 +108,11 @@
               onclick="openModal()"
             />
           </div>
-          <div id="imageModal" class="modal">
-            <span class="close" onclick="closeModal()">&times;</span>
-            <img class="modal-content" id="fullImage" />
+          <div id="imageModal" class="profile-modal">
+            <span class="profile-modal-close" onclick="closeModal()"
+              >&times;</span
+            >
+            <img class="profile-modal-content" id="fullImage" />
           </div>
         </div>
         <blockquote class="about-paragraph">
@@ -108,7 +127,7 @@
         </blockquote>
         <ul class="skill-elements">
           <li>
-            <h1 style="font-size: large">Programmer Skills</h1>
+            <h1 style="font-size: x-large">Programmer Skills</h1>
           </li>
           <li class="skill-item">
             <span class="skill-name">HTML</span>
@@ -164,13 +183,11 @@
               post it for everyone to see. It is my first website created for
               simple academuic purpose.
             </p>
-            <p>
-              <a
-                href="https://github.com/Neil-Patrick/Pajadan-Blog"
-                target="_blank"
-                >View Repository</a
-              >
-            </p>
+            <a
+              href="https://github.com/Neil-Patrick/Pajadan-Blog"
+              target="_blank"
+              >View Repository</a
+            >
           </article>
 
           <article class="project">
@@ -245,7 +262,8 @@
 
     <footer>
       <div class="footer-content">
-        <h1 style="font-size: 1.5rem;">Neil Patrick Pajadan || Front-End Developer</h1>
+        <h1>Neil Patrick M. Pajadan</h1>
+        <h3>Front-End Programmer</h3>
         <nav class="footer-nav">
           <ul class="footer-nav-elements">
             <li><a href="index.html">Home</a></li>
@@ -408,6 +426,6 @@
       </div>
     </footer>
 
-    <script src="website.js" defer></script>
+    <script src="website.js"></script>
   </body>
 </html>
