--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
         <blockquote class="about-paragraph">
           <p>
-            "Hello! I'm Neil Patrick M. Pajadan, a second-year Computer Science
+            "Hello! I'm Neil Patrick M. Pajadan, a second-year ComSci
             student from the Philippines specializing in Web Design and
             Development. As an aspiring web developer, I am passionate about
             creating dynamic web experiences. With foundational training and a
