--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="author" content="Neil Patrick Pajadan" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pajadan Portfolio</title>
+    <link rel="icon" href="images/favicon.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -28,6 +29,10 @@
   </head>
 
   <body data-theme="dark">
+    <div id="loading-screen">
+      <div class="loader"></div>
+    </div>
+
     <header>
       <nav class="header-nav">
         <div class="logo">
@@ -35,7 +40,7 @@
             <img src="images/NPMP.png" alt="Logo" class="logo-container" />
           </a>
           <a href="index.html">
-            <h1>PAJADAN</h1>
+            <h1>Neil Patrick</h1>
           </a>
         </div>
         <div class="menu-toggle" id="mobile-menu" aria-expanded="false">
@@ -47,6 +52,12 @@
           </li>
           <li>
             <a href="#about">About</a>
+          </li>
+          <li>
+            <a href="#certifications">Credentials</a>
+          </li>
+          <li>
+            <a href="#skills">Skills</a>
           </li>
           <li>
             <a href="#projects">Projects</a>
@@ -117,17 +128,96 @@
         </div>
         <blockquote class="about-paragraph">
           <p>
-            "Hello! I'm Neil Patrick M. Pajadan, a second-year ComSci
-            student from the Philippines specializing in Web Design and
-            Development. As an aspiring web developer, I am passionate about
-            creating dynamic web experiences. With foundational training and a
-            keen interest in learning, I'm excited to grow my skills in the
-            field of web application."
+            "Hello! I'm Neil Patrick M. Pajadan, a second-year ComSci student
+            from the Philippines specializing in Web Design and Development. As
+            an aspiring web developer, I am passionate about creating dynamic
+            web experiences. With foundational training and a keen interest in
+            learning, I'm excited to grow my skills in the field of web
+            application."
           </p>
         </blockquote>
+        <div class="timeline">
+          <h2>Academic Background</h2>
+          <div class="timeline-item">
+            <div class="timeline-content">
+              <h3>2023 - Present: College</h3>
+              <h4>Bachelor of Science in Computer Science (BSCS)</h4>
+              <p>Laguna State Polytechnic University</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-content">
+              <h3>2021 - 2023: Senior High School</h3>
+              <h4>Science, Technology, Engineering, and Mathematics (STEM)</h4>
+              <p>Laguna Science Integrated High School</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-content">
+              <h3>2017 - 2021: Junior High School</h3>
+              <h4>K-12 Curriculum Education</h4>
+              <p>The Refiner's Christian School</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-content">
+              <h3>2008 - 2017: Elementary School</h3>
+              <h4>K-12 Curriculum Education</h4>
+              <p>The Refiner's Christian School</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="divider"></div>
+
+    <section id="certifications">
+      <div class="certificates-gallery">
+        <h1 style="text-align: center">
+          Certifications
+          <hr class="section-divider" />
+        </h1>
+        <div class="certificates-gallery-container">
+          <img
+            src="images/intro to vgd.png"
+            alt="Certificate 1"
+            class="certificates-gallery-item"
+            onclick="certopenModal(this)"
+          />
+          <img
+            src="images/js essentials 1.png"
+            alt="Certificate 2"
+            class="certificates-gallery-item"
+            onclick="certopenModal(this)"
+          />
+          <img
+            src="images/js essentials 2.png"
+            alt="Certificate 3"
+            class="certificates-gallery-item"
+            onclick="certopenModal(this)"
+          />
+        </div>
+      </div>
+    </section>
+
+    <div id="cert-modal" class="cert-modal" onclick="certcloseModal()">
+      <span class="cert-close">&times;</span>
+      <img class="cert-modal-content" id="cert-modal-image" />
+      <div class="loader"></div>
+    </div>
+
+    <div class="divider"></div>
+
+    <section>
+      <div id="skills">
+        <h1 style="text-align: center">
+          My Skills
+          <hr class="section-divider" />
+        </h1>
         <ul class="skill-elements">
           <li>
-            <h1 style="font-size: x-large">Programmer Skills</h1>
+            <h1 style="font-size: x-large">Programming Languages</h1>
           </li>
           <li class="skill-item">
             <span class="skill-name">HTML</span>
@@ -285,7 +375,7 @@
                 <li>
                   <img src="images/email icon.png" alt="Email Icon" />
                   <a href="https://www.gmail.com" target="_blank"
-                    >patpajadan6825@gmail.com</a
+                    >neilpatrick.dev@gmail.com</a
                   >
                 </li>
                 <li>
@@ -426,6 +516,7 @@
       </div>
     </footer>
 
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="website.js"></script>
   </body>
 </html>
