--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
         </h1>
         <div class="certificates-gallery-container">
           <img
+            src="images/basic principles of design.png"
+            alt="Certificate 4"
+            class="certificates-gallery-item"
+            onclick="certopenModal(this)"
+          />
+          <img
             src="images/intro to vgd.png"
             alt="Certificate 1"
             class="certificates-gallery-item"
