--- a/index.html
+++ b/index.html
@@ -407,6 +407,15 @@
                     >Dev Community</a
                   >
                 </li>
+                <li>
+                  <img
+                    src="images/leetcode icon.png"
+                    alt="LeetCode Icon"
+                  />
+                  <a href="https://leetcode.com/u/neil-patrick/" target="_blank"
+                    >LeetCode</a
+                  >
+                </li>
               </ul>
             </div>
             <div class="personal">
@@ -446,6 +455,12 @@
                   <img src="images/tiktok icon.png" alt="TikTok Icon" />
                   <a href="https://www.tiktok.com/@aethr_0" target="_blank"
                     >TikTok</a
+                  >
+                </li>
+                <li>
+                  <img src="images/youtube icon.png" alt="YouTube Icon" />
+                  <a href="https://www.youtube.com/@AetherReigns" target="_blank"
+                    >YouTube</a
                   >
                 </li>
               </ul>
